# Ollama-Cpp-Query

./: CMakeLists.txt  Makefile  README.md  build.sh  ollama_cpp.cpp
